Bug 294538 - History buttons do not update when visiting named anchors
Summary: History buttons do not update when visiting named anchors
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-21 01:39 UTC by David E. Narvaez
Modified: 2012-02-21 07:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David E. Narvaez 2012-02-21 01:39:46 UTC
Version:           latest git snapshot (using KDE 4.8.0) 
OS:                Linux

When you visit named anchor (i.e., navigating from example.com to example.com/#about) history arrows are not updated.

Reproducible: Always

Steps to Reproduce:
1. Open a new tab
2. Navigate to http://techbase.kde.org/Development/Tutorials/Session_Management
3. Click on any of the TOC links, check the navigation arrows
4. Return to this tab
5. Return to the new tab, check the navigation arrows

Actual Results:  
On step 3, the back navigation arrow is not updated even though there's a new item in the history. On step 5, the back navigation arrow is enabled.

Expected Results:  
You should be able to see the enabled back button on step 3.
Comment 1 David E. Narvaez 2012-02-21 07:32:05 UTC
Git commit 79c808a25d680b5782c63f02258b3d0492d55f05 by David E. Narváez.
Committed on 21/02/2012 at 08:29.
Pushed by narvaez into branch 'master'.

Hook the urlChanged Signal to History Actions Update

This catches navigation to named anchors
REVIEW: 104035

M  +2    -0    src/mainview.cpp

http://commits.kde.org/rekonq/79c808a25d680b5782c63f02258b3d0492d55f05