Hook the urlChanged Signal to History Actions Update

This catches navigation to named anchors

BUG: 294538
REVIEW: 104035